force-app/main/default/objects/Volunteer_Eligibility__c/Volunteer_Eligibility__c.object-meta.xml
<CustomObject>
    <description>Records the different eligibility requirements for each volunteer type.</description>
    <label>Volunteer Eligibility</label>
    <nameField>
        <displayFormat>VE- {00000}</displayFormat>
        <label>Volunteer Eligibility ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Eligibility</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>