force-app/main/default/objects/Volunteer_Eligibility__c/fields/Eligibility_Active__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check if this eligibility criteria is still in use</inlineHelpText>
    <label>Eligibility Active</label>
    <type>Checkbox</type>
</CustomField>