force-app/main/default/objects/Volunteer_Eligibility__c/fields/Volunteer_Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Eligibility_Criteria__c</fullName>
    <label>Volunteer Eligibility Criteria</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Volunteer_Eligibility</valueSetName>
    </valueSet>
</CustomField>