force-app/main/default/objects/Volunteer_Eligibility__c/fields/Volunteer_Role__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Role__c</fullName>
    <description>Types of roles the volunteer plays in the organisation. Defines eligibility criteria.</description>
    <label>Volunteer Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Volunteer_Types</valueSetName>
    </valueSet>
</CustomField>