force-app/main/default/objects/Volunteer_Eligibility__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Volunteer_Status__c</columns>
    <columns>Volunteer_Role__c</columns>
    <columns>Volunteer_Eligibility_Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>